# serenade-experiments-sigmod

./: .gitignore  README.md  docker_run_ai_platform.sh  start_all.sh
datasets/: README.md
dd_impl/: Cargo.toml  docker_local_run.sh  docker_publish_to_repo.sh  start_dd.sh
dd_impl/src/: lib.rs  stopwatch.rs  vsknn.rs
dd_impl/src/differential/: mod.rs
evaluator/: README.md  pom.xml  start.sh
java_impl/: Dockerfile  docker_local_build.sh  docker_publish_to_repo.sh  pom.xml  start.sh
load_simulator/: README.md
python_impl/: Dockerfile-py  README.md  docker_local_run.sh  docker_publish_to_repo.sh  evaluate_file.py  main_duckdb.py  main_python.py  requirements.txt  start_duckdb.sh  start_python.sh
rust_optimized_impl/: Cargo.toml  Dockerfile  Dockerfile-aiplatform-evalutation  RUST_RECIPES.md  docker_local_build.sh  docker_publish_to_repo.sh  start_rust.sh  start_webservice.sh
scalable_index_computation/: README.md
serenade/: Cargo.toml  README.md  start_webservice.sh
simulator/: README.md  pom.xml
vmis_diff/: Cargo.toml  Dockerfile-dd  README.md  docker_local_build.sh  docker_local_interactively.sh  docker_local_run.sh  docker_publish_to_repo.sh  start_dd.sh
vmis_diff/src/: io.rs  lib.rs  vmisknn.rs
vmis_diff/src/differential/: dataflow.rs  mod.rs  types.rs
vmis_java/: README.md  docker_local_interactively.sh  docker_local_run.sh  docker_publish_to_repo.sh  pom.xml  start.sh
vmis_sql_python/: Dockerfile-sql  README.md  docker_local_build.sh  docker_local_interactively.sh  evaluate_file.py  main_duckdb.py  requirements.txt  start_python.sh  (+3 more)
(+102 files in other folders)
