[package]
name = "serenade"
version = "0.1.0"
authors = ["submission@sigmod2021.org"]
edition = "2018"

[[bin]]
name = "dd_replay_from_file"
path = "src/bin/dd_replay_from_file.rs"

[dependencies]
csv = "1.0"
rand = "0.6.1"
fnv = "1.0.2"
timely = "0.11.1"
differential-dataflow = "0.11.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
itertools = "0.9.0"
tdigest = "0.2.2"
